--- a/estilos/index.css
+++ b/estilos/index.css
@@ -35,12 +35,12 @@ body, .container {
     background-color: var(--azul-escuro);
     height: 100%;
     overflow: hidden;
-    
+    font-size: 12px;
 }
 
 .azul_claro, .azul_claro1 {
     background: linear-gradient(to right, var(--azul) 0%, var(--azul-claro) 50%, var(--azul) 100%);
-    height: 45px;
+    height: 30px;
 }
 
 .azul_claro {
@@ -58,7 +58,7 @@ body, .container {
 
 .container_form img{
     display: flex;
-    width: 150px;
+    width: 130px;
     border-radius: 50%;
     padding: 25px;
     margin: auto;
@@ -76,11 +76,11 @@ body, .container {
 }
 
 label > i {
-    font-size: 30px;
+    font-size: 25px;
 }
 
 label {
-    margin: 10px 0px;
+    margin: 8px 0px;
 }
 
 #email, #senha {
@@ -89,7 +89,9 @@ label {
 }
 
 .lembrar-senha {
-    margin: 10px 0px;
+    display: flex;
+    margin: 8px 0px;
+    align-items: center;
 
     & input {
         width: 40px;
