--- a/estilos/pagina-inicial.css
+++ b/estilos/pagina-inicial.css
@@ -38,7 +38,7 @@ body, .container {
     height: 100%; 
     margin: 0; /* Remove margens padrão do body */
     font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 60px;
+    padding-bottom: 50%;
     
 }
 
@@ -127,7 +127,7 @@ body, .container {
     border-radius: 8px;
     background-color: var(--cinza-transparente);
     width: 80px;
-    height: 40px;
+    height: 50px;
 }
 
 .categoria:hover {
@@ -150,7 +150,7 @@ body, .container {
     padding: 10px;
     margin: auto;
     width: 85%;
-    height: 100px;
+    height: 130px;
     overflow: auto;
 }
 
