--- a/estilos/index.css
+++ b/estilos/index.css
@@ -34,7 +34,7 @@ html {
 body, .container {
     background-color: var(--azul-escuro);
     height: 100%;
-    
+    overflow: hidden;
     font-size: 12px;
 }
 
