--- a/estilos/suporte.css
+++ b/estilos/suporte.css
@@ -76,7 +76,7 @@ body, .container {
     border: none;
     border-radius: 10px;
     padding: 8px;
-
+    margin-top: 60px;
 }
 
 #Motivo-do-contato {
@@ -97,6 +97,21 @@ body, .container {
     text-align: center;
     padding-inline: 10px;
     margin: 10px;
+    margin-top: 20px;
 }
 
+.enviados {
+    border: 1px solid var(--branco);
+    border-radius: 10px;
+    height: 200px;
+    margin-top: 10px;
+
+    & h1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height:200px;
+
+    }
+}
 
