--- a/estilos/suporte.css
+++ b/estilos/suporte.css
@@ -44,6 +44,7 @@ body, .container {
 
 .header-suporte {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     margin: 20px;
    
@@ -77,6 +78,12 @@ body, .container {
     border-radius: 10px;
     padding: 8px;
     margin-top: 60px;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.container-suporte button:hover {
+    background-color: rgb(28, 28, 28);
 }
 
 #Motivo-do-contato {
