--- a/estilos/pagina-inicial.css
+++ b/estilos/pagina-inicial.css
@@ -110,6 +110,7 @@ body, .container {
 .categorias {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: initial;
     justify-content: space-between;
     gap: 10px;
     padding: 20px;
@@ -126,7 +127,7 @@ body, .container {
     padding: 5px 7px;
     border-radius: 8px;
     background-color: var(--cinza-transparente);
-    width: 80px;
+    width: 75px;
     height: 50px;
 }
 
