--- a/estilos/cadastro.css
+++ b/estilos/cadastro.css
@@ -16,10 +16,21 @@
     --azul-claro-degrade: #0147a6;
 }
 
+body, .container {
+    background: linear-gradient(to bottom, #0065e9, var(--azul-escuro-degrade));
+    background-attachment: fixed; /* Mantém o fundo fixo */
+    height: 100%; 
+    margin: 0; /* Remove margens padrão do body */
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 10px;
+    color: var(--branco);
+}    
+
 h1 {
     text-align: center;
     margin: 0px;
     margin-bottom: 10px;
+    color: var(--branco);
 }
 
 select {
@@ -30,7 +41,7 @@ select {
 }
 
 span {
-    color: var(--azul-claro-degrade);
+    color: var(--azul-claro);
 }
 
 .img-cadastro {
@@ -40,6 +51,7 @@ span {
 
 img {
     width: 150px;
+    border-radius: 50%;
 }
 
 .form-contratante {
@@ -47,25 +59,36 @@ img {
     flex-direction: column;
     width: 85%;
     margin: auto;
-    background-color: rgb(207, 207, 207);
+    background-color:#0119397a ;
     border-radius: 10px;
+    box-shadow: 0px 0px 12px var(--azul-claro);
     padding: 15px;
 
     & input {
-        padding: 5px;
+        padding: 8px;
         margin: 10px 0px;
-        border-radius: 5px;
+        border-radius: 10px;
     }
 
 }
 
+.cadastro {
+    font-size: 20px;
+}
+
 button {
     border: none;
-    background-color: black;
+    background-color: var(--azul-claro-degrade);
     color: white;
     padding: 8px;
     border-radius: 10px;
     font-weight: 600;
+    margin-top: 20px;
+}
+
+button:hover {
+    background-color: #0063e6;
+    border: 1px solid white;
 }
 
 .voltar a {
@@ -74,9 +97,9 @@ button {
     align-items: center;
     text-decoration: none;
     font-size: 40px;
-    border: 1px solid rgb(93, 93, 93);
+    border: 1px solid white;
     border-radius: 50%;
-    color: gray;
+    color: white;
 }
 
 .voltar a:hover {
