--- a/estilos/formas-de-cadastro.css
+++ b/estilos/formas-de-cadastro.css
@@ -16,23 +16,35 @@
     --azul-claro-degrade: #0147a6;
 }
 
-.img-cadastro {
-    display: flex;
-    justify-content: center;
-}
 
-img {
-    width: 150px;
+body, .container {
+    background: linear-gradient(to bottom, #0065e9, var(--azul-escuro-degrade));
+    background-attachment: fixed; /* Mantém o fundo fixo */
+    height: 100%; 
+    margin: 0; /* Remove margens padrão do body */
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 10px;
+    color: white;
+}    
+
+.container {
+    margin-top: 40%;
 }
 
 span {
-    color: var(--azul-claro-degrade);
+    color: var(--azul-claro);
+    
 }
 
 h1 {
     text-align: center;
     margin: 0px;
     margin-bottom: 40px;
+    font-size:30px;
+}
+
+.cadastro {
+    font-size: 20px;
 }
 
 .opcoes-cadastro {
@@ -41,6 +53,9 @@ h1 {
     width: 85%;
     margin: auto; 
     border-radius: 10px;
+    background-color: var(--branco);
+    padding: 20px;
+    box-shadow: 0px 0px 12px var(--azul-claro);
 
     & a {
         text-decoration: none;
@@ -55,11 +70,12 @@ h1 {
 }
 
 .opcao-cadastro {
+    
     color: black;
 }
 
 .opcao-cadastro:hover {
-    background-color: var(--azul-claro);
+    background-color: #c0dbff;
 }
 
 .opcao-cadastro2 {
@@ -77,9 +93,9 @@ h1 {
     align-items: center;
     text-decoration: none;
     font-size: 40px;
-    border: 1px solid rgb(93, 93, 93);
+    border: 1px solid white;
     border-radius: 50%;
-    color: gray;
+    color: white;
 }
 
 .voltar a:hover {
