--- a/estilos/redefinir-senha.css
+++ b/estilos/redefinir-senha.css
@@ -15,3 +15,98 @@
     --azul-escuro-degrade: #011939;
     --azul-claro-degrade: #0147a6;
 }
+
+* {
+    margin: 0px;
+    padding: 0px;
+    color: var(--branco);
+}
+
+a {
+    text-decoration: none;
+    color: var(--branco);
+}
+
+html {
+    height: 100%;
+    
+}
+
+body, .container {
+    background: linear-gradient(to bottom, var(--azul-claro-degrade), var(--azul-escuro-degrade));
+    background-attachment: fixed; /* Mantém o fundo fixo */
+    height: 100%; 
+    margin: 0; /* Remove margens padrão do body */
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 60px;
+} 
+
+.container h1 {
+    padding: 10px;
+    text-align: center;
+    margin-top: 10px;
+    
+}
+
+.container p {
+    padding: 15px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.container_form_senha {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+
+    & label {
+        padding: 10px 0px;
+    }
+
+    & input {
+        padding: 8px;
+        border: none;
+        border-radius: 10px;
+        color: black;
+    }
+
+    & button {
+        padding: 15px;
+        margin-top: 30px;
+        background-color: black;
+        font-weight: 600;
+        border: none;
+        border-radius: 10px;
+    }
+
+    & button:hover {
+        background-color: rgb(28, 28, 28);
+    }    
+}
+
+
+
+
+.voltar a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-size: 40px;
+    border: 1px solid white;
+    border-radius: 50%;
+    color: white;
+}
+
+.voltar a:hover {
+    background-color: var(--azul);
+    color: white;
+}
+
+.voltar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    
+}
