--- a/estilos/tela-de-usuario.css
+++ b/estilos/tela-de-usuario.css
@@ -19,7 +19,6 @@
 * {
     margin: 0px;
     padding: 0px;
-    color: var(--branco);
 }
 
 a {
@@ -38,7 +37,7 @@ body, .container {
     height: 100%; 
     margin: 0; /* Remove margens padrão do body */
     font-family: Arial, Helvetica, sans-serif;
-    
+    color: var(--branco);
 }
 
 img {
@@ -106,7 +105,7 @@ img {
     border: none;
     padding: 5px;
     margin-top: 10px;
-    
+    color: var(--branco);
 }
 
 .informacoes-usuario {
@@ -263,4 +262,92 @@ img {
     padding: 5px 10px;
     border-radius: 10px;
     margin-bottom: 5px;
+}
+
+
+
+
+
+/* Estilos para a seção de informações do usuário */
+
+#email-usuario, #senha-usuario {
+    margin: 10px 0;
+}
+
+.btn-editar {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.btn-editar:hover {
+    background-color: #45a049;
+}
+
+/* Estilos da tela de edição */
+.tela-edicao {
+    display: none;  /* Inicialmente escondida */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+
+.form-edicao {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.form-edicao h3 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.form-edicao label {
+    display: block;
+    margin: 10px 0 5px;
+}
+
+.form-edicao input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.form-edicao button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.form-edicao button:hover {
+    background-color: #45a049;
+}
+
+.form-edicao button:nth-child(2) {
+    background-color: #f44336;
+}
+
+.form-edicao button:nth-child(2):hover {
+    background-color: #e53935;
 }
