--- a/estilos/tela-de-usuario.css
+++ b/estilos/tela-de-usuario.css
@@ -157,7 +157,6 @@ img {
 
 .cidade {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 
     & i {
@@ -331,7 +330,7 @@ img {
 .form-edicao button {
     width: 100%;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: var(--azul-escuro);
     color: white;
     border: none;
     border-radius: 4px;
