--- a/estilos/cadastro.css
+++ b/estilos/cadastro.css
@@ -116,3 +116,38 @@ button:hover {
 }
 
 
+/* Estilos gerais */
+
+/* Tela de Carregamento */
+.loading-container {
+    position: fixed; /* Fixa a posição na tela */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo semitransparente */
+    display: flex; /* Usamos flexbox para centralizar o conteúdo */
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center; /* Centraliza verticalmente */
+    z-index: 9999; /* Garante que a tela de carregamento fique acima de outros elementos */
+}
+
+.spinner {
+    border: 8px solid #f3f3f3; /* Cor da borda de fundo */
+    border-top: 8px solid #3498db; /* Cor da borda de carregamento */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite; /* Animação infinita de rotação */
+    margin-bottom: 20px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+p {
+    font-size: 18px;
+    color: #fff; /* Texto branco para melhor visibilidade sobre o fundo escuro */
+}
